# sudostake_contracts

./: Cargo.toml  README.md  TESTNET.md  config.json
.github/workflows/: rust.yml
concept/: sudostake.md
contracts/accounts_manager/: Cargo.toml
contracts/accounts_manager/examples/: schema.rs
contracts/accounts_manager/schema/: execute_msg.json
contracts/accounts_manager/src/: contract.rs  integration_test.rs  lib.rs  msg.rs
contracts/lp_group/: Cargo.toml
contracts/lp_group/examples/: schema.rs
contracts/lp_group/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/lp_group/src/: contract.rs  error.rs  integration_test.rs  msg.rs  state.rs
contracts/sudomod/: Cargo.toml  NOTICE  README.md
contracts/sudomod/examples/: schema.rs
contracts/sudomod/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/sudomod/src/: contract.rs  error.rs  helpers.rs  integration_test.rs  lib.rs  msg.rs  state.rs
contracts/token-swap/: Cargo.toml  README.md  TESTNET.md
contracts/token-swap/examples/: schema.rs
contracts/token-swap/schema/: execute_msg.json  instantiate_msg.json
contracts/token-swap/src/: contract.rs  error.rs  integration_test.rs  lib.rs  msg.rs  state.rs  unit_tests.rs
contracts/vault/: Cargo.toml  README.md  TESTNET.md
contracts/vault/.cargo/: config
contracts/vault/examples/: schema.rs
contracts/vault/schema/: execute_msg.json  instantiate_msg.json
contracts/vault/src/: authorisation.rs  contract.rs  error.rs  helpers.rs  integration_test.rs  lib.rs  msg.rs  state.rs  types.rs
contracts/vaults_manager/: Cargo.toml
