[package]
name = "sudomod"
version = "0.1.0"
authors = ["Muhammed Ali <codemuhammed@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = {  version = "0.10.3" }
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw-utils = {version = "1.0.1"}
protobuf = { version = "3.2.0", features = ["with-bytes"] }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
vault_contract = { path = "../vault", version = "0.2.0", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.16.2"
anyhow = { version = "1.0.51"}