[package]
name = "token-swap"
version = "0.1.0"
authors = ["Muhammed Ali <codemuhammed@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cw0 = {  version = "0.10.3" }
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.14.0"
cw2 = "0.14.0"
cw20 = "0.14.0"
cw20-base = { version = "0.14.0", features = ["library"] }
cw-utils = {version = "0.14.0"}
protobuf = { version = "2", features = ["with-bytes"] }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.14.0"
anyhow = { version = "1.0.51"}
cw20-base = { version = "0.14.0", features = ["library"] }